# MLOPS

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
mlops_project/: predict_model.py  train_model.py
mlops_project/data/: make_dataset.py
mlops_project/models/: model.py
mlops_project/visualizations/: visualize.py
